@@ -61,6 +61,11 @@ Fixed bugs:
 * Ant failed to locate tools.jar if the jre directory name wasn't all
   lowercase.  Bugzilla Report 25798.
 
+ * Redirector exhibited inconsistent behavior with regard to split
+   output.  When sent to file only, files would be created in all
+   cases; when split file-property, files were only created if
+   writes were performed.
+
 Other changes:
 --------------
 
